<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textGreeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_welcome"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top|start"
        android:hint="@string/hint_note"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textGreeting" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/editNote"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSaveFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_save_file" />

        <Button
            android:id="@+id/btnLoadFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/btn_load_file" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSaveRecord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_save_record"
        app:layout_constraintBottom_toTopOf="@+id/textStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutButtons" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/status_ready"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveRecord" />

</androidx.constraintlayout.widget.ConstraintLayout>